# fsc-benchmark

./: README.md
fsc_benchmark_toolkit/: CITATION.cff  MANIFEST.md  README.md  pyproject.toml
fsc_benchmark_toolkit/docs/: INPUT_SCHEMA.md  METRICS.md  RELEASE_NOTES.md  TASK_ECOSYSTEMS.md  TAXONOMY.md  VALIDATION_GUIDE.md
fsc_benchmark_toolkit/examples/generations/: demo_generations.jsonl
fsc_benchmark_toolkit/examples/tasks/: demo_tasks.json
fsc_benchmark_toolkit/reports/: demo_report.md
fsc_benchmark_toolkit/src/fsc_benchmark/: __init__.py  cli.py  io.py  metrics.py  models.py  reporting.py  taxonomy.py
fsc_benchmark_toolkit/tests/: test_io_cli.py  test_metrics.py
