[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fsc-benchmark"
version = "0.1.0"
description = "Utilities for measuring False Security Confidence in benign LLM code generation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Xiaolei Ren", email = "xlren@must.edu.mo"}
]
keywords = [
  "false-security-confidence",
  "llm-code-generation",
  "secure-code-generation",
  "benchmark",
  "software-security"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SysSoftwareSecLab/fsc-benchmark"
Repository = "https://github.com/SysSoftwareSecLab/fsc-benchmark"

[project.scripts]
fsc-benchmark = "fsc_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
